--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fullcalendar/list": "^6.1.5",
     "@fullcalendar/timegrid": "^6.1.5",
     "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.137",
     "@mui/material": "^5.11.16",
     "@mui/x-data-grid": "^6.0.4",
     "@nivo/bar": "^0.80.0",
@@ -27,18 +28,22 @@
     "json2mq": "^0.2.0",
     "material-ui-popup-state": "^5.0.8",
     "mdi-material-ui": "^7.7.0",
+    "mui-file-dropzone": "^4.0.2",
     "mui-nested-menu": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-i18next": "^12.3.1",
     "react-icon": "^1.0.0",
     "react-icons": "^4.8.0",
     "react-live-clock": "^6.1.13",
+    "react-number-format": "^5.2.2",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-simple-image-slider": "^2.4.1",
     "react-slick": "^0.29.0",
+    "react-use-file-upload": "^0.9.5",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.2"
